--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     margin:auto; /* centers my wrapper*/
     width:1040px;
     background:gray;
-    opacity: 1.5;
+    opacity: .9;
     overflow: hidden;
     padding:20px;
     margin-bottom:35px;
@@ -20,6 +20,7 @@ body{
 h1{
     font-size:2em;
     margin-bottom: 8px; 
+    colo:white;
 
 }
 
@@ -27,6 +28,7 @@ h2 { font-size:1.6em;
     margin-bottom:20px;
     font-family:verdana,helvetica,arial,sans-serif;
     font-size:100%;
+    color:white;
 }
 h3 { 
     font-size:1.2em;
@@ -36,12 +38,13 @@ p {
     margin-bottom:20px;
     line-height:1.2em;
     font-size:1em ;
-       }
+    color:white;      }
 
 main {
     width:600px;
     float: left;
     clear: both;
+    color:white;
 }
        
 aside {
