--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 body{
     padding:50px;
     background-image:url(https://www.firstatlanticcommerce.com/wp-content/uploads/2017/01/AdobeStock_98379618.jpeg);
-    background-repeat: no-repeat;);
+    background-repeat: no-repeat;
     background-repeat: no-repeat;
 
     
@@ -20,7 +20,7 @@ body{
 h1{
     font-size:2em;
     margin-bottom: 8px; 
-    colo:white;
+    color:white;
 
 }
 
